--- a/src/layouts/InsideLayout/index.less
+++ b/src/layouts/InsideLayout/index.less
@@ -1,18 +1,17 @@
-.inner-layout {
-  .inner-layout__sider,
-  .inner-layout__main {
+.inner__layout {
+  &__sider {
     height: 100vh;
     overflow-y: auto;
   }
-  .inner-layout__sider::-webkit-scrollbar {
+  &__sider::-webkit-scrollbar {
     width: 4px;
     background-color: #263849;
   }
-  .inner-layout__sider::-webkit-scrollbar-thumb {
+  &__sider::-webkit-scrollbar-thumb {
     width: 4px;
     background-color: #54626f;
   }
-  .inner-layout__main {
+  &__main {
     background-color: #f0f2f5;
     .content {
       margin: 14px 14px 0;
